# transcribing

./: .gitignore  LICENSE  main.py  pyproject.toml
