# pyproject.toml
[project]
name = "transcribing"
version = "0.2.0"
description = "CLI tool to transcribe video files to SRT format using OpenAI Whisper large-v3"
requires-python = ">=3.10,<3.13"
dependencies = [
    "transformers>=4.40.0",
    "datasets[audio]>=2.18.0",
    "accelerate>=0.27.0",
    "torch>=2.0.0,<2.10",
    "soundfile>=0.12.0",
    "numpy>=1.23.0",
]

[project.scripts]
transcribe = "main:main"

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
